# Arion

./: .gitignore  README.md
OSCAR/: Arion.jl  ArionHash.jl  ArionHash_collision_groebner_basis_computation.jl  ArionHash_groebner_basis_computation.jl  ArionHash_polynomial_model.jl  ArionHash_quotient_space_dimension_evolution.jl  Arion_custom_functions.jl  Arion_generic_groebner_basis.ipynb  Arion_generic_polynomial_model.jl  Arion_groebner_basis_computation.jl  Arion_polynomial_model.jl  Arion_quotient_space_dimension_evolution.jl  README.md  utilities.jl  zero_dimensional_ideals.jl
Plonk/: README.md
Plonk/Arion/: Cargo.toml  README.md
Plonk/Arion/benches/: merkle.rs  merkle_depth_16.rs  merkle_depth_32.rs  merkle_depth_4.rs  merkle_depth_8.rs  sponge.rs
Plonk/Arion/constant_generation/: README.md  arion_constant_generation.ipynb
Plonk/Arion/src/: constants.rs  lib.rs  params.rs  perm_uses.rs  sponge.rs  strategies.rs  tree.rs
Plonk/Arion/src/sponge/: gadget.rs  hash.rs  truncated.rs
Plonk/Arion/src/strategies/: gadget.rs  scalar.rs
Plonk/Arion/src/tree/: annotation.rs  branch.rs  leaf.rs  zk.rs
Plonk/Arion/tests/: block_height.rs  max_annotation.rs  tree.rs  walkable_iter.rs
Plonk/Poseidon Benchmark/: Cargo.toml
Plonk/Poseidon Benchmark/benches/: merkle.rs  merkle_depth_16.rs  merkle_depth_32.rs  merkle_depth_4.rs  merkle_depth_8.rs  sponge.rs
SageMath/: Arion.sage  ArionHash.sage  ArionHash_constraints.ipynb  ArionHash_polynomial_model.sage  Arion_Groebner_basis_estimate.ipynb  Arion_permutation_density.sage  Arion_permutation_density_experiment.sage  Arion_polynomial_model.sage  Arion_statistical_cryptanalysis.ipynb  README.md  arion_density_experiment.sage  statistical_cryptanalysis.ipynb
libsnark/: Makefile  README.md  plot.py  setup.sh
libsnark/include/gadget/: abr_gadget.hpp  add_gadget.hpp  digest_variable_pp.hpp  field_variable.hpp  fixed_mtree_gadget.hpp  gadget_pp.hpp  mtree_gadget.hpp  pabr_gadget.hpp  pb_variable_pp.hpp  pow_gadget.hpp  xor_gadget.hpp
libsnark/include/gadget/arion/: arion_gadget.hpp
libsnark/include/gadget/arion_v2/: arion_v2_gadget.hpp
libsnark/include/gadget/griffin/: griffin_gadget.hpp
libsnark/include/gadget/mimc256/: mimc256_gadget.hpp
libsnark/include/gadget/mimc512f/: mimc512f_gadget.hpp
libsnark/include/gadget/mimc512f2k/: mimc512f2k_gadget.hpp
libsnark/include/gadget/poseidon5/: poseidon5_gadget.hpp
libsnark/include/gadget/sha256/: sha256_gadget_pp.hpp
libsnark/include/gadget/sha512/: sha512_aux.hpp  sha512_aux.tcc  sha512_components.hpp  sha512_components.tcc  sha512_gadget.hpp  sha512_gadget.tcc  sha512_gadget_pp.hpp
libsnark/include/hash/: arion.hpp  arion_v2.hpp  griffin.hpp  mimc256.hpp  mimc512f.hpp  mimc512f2k.hpp  poseidon5.hpp  sha256.hpp  sha512.hpp
libsnark/include/r1cs/: r1cs_ppzksnark_pp.hpp
libsnark/include/tree/: fixed_abr.hpp  fixed_mtree.hpp  mtree.hpp
libsnark/include/util/: algebra.hpp  array_utils.hpp  bit_pack.hpp  const_math.hpp  intrinsics.h  measure.hpp  ranges.hpp  string_utils.hpp
libsnark/src/: benchmark_abr.cpp  benchmark_mtree.cpp
libsnark/test/: abr_gadget.cpp  arion_gadget.cpp  arion_v2_gadget.cpp  fixed_mtree_gadget.cpp  griffin_gadget.cpp  mimc256_gadget.cpp  mimc512f2k_gadget.cpp  mimc512f_gadget.cpp  mtree_gadget.cpp  poseidon5_gadget.cpp  pow_gadget.cpp  sha256_gadget.cpp
libsnark/test/cpp20/: arion.cpp  arion_v2.cpp  fixed_abr.cpp  fixed_mtree.cpp  griffin.cpp  mimc256.cpp  mimc512f.cpp  mimc512f2k.cpp  mtree.cpp  poseidon5.cpp  run_sha256.cpp  run_xor.cpp  sha256.cpp  sha512.cpp
