[package]
name = "arion"
version = "0.1.0"
edition = "2021"
description ="Implementation of ArionHash algorithm over the Bls12-381 Scalar field."
categories = ["algorithms", "cryptography", "no-std", "wasm"]
keywords = ["cryptography", "zero-knowledge", "crypto"]

[dependencies]
dusk-bls12_381 = { version = "0.11", default-features = false }
dusk-jubjub = { version = "0.12", default-features = false }
dusk-bytes = "0.1"
microkelvin = { version = "0.17", optional = true }
nstack = { version = "0.16", optional = true }
ranno = { version = "0.1", optional = true }
dusk-plonk = { version = "0.13", default-features = false, features = ["alloc"] }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.3"
rand = { version = "0.8", default-features = false, features = ["getrandom", "std", "std_rng"] }
rkyv = { version = "0.7", default-features = false, features = ["size_32"] }

[features]
default = [
    "dusk-plonk/std",
    "dusk-jubjub/std",
    "dusk-bls12_381/default",
    "alloc",
]
alloc = [
    "microkelvin",
    "nstack",
    "ranno",
]
rkyv-impl = [
    "dusk-bls12_381/rkyv-impl",
    "rkyv",
    "bytecheck"
]

[profile.dev]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.release]
debug = false
panic = 'abort'
lto = true
incremental = false
codegen-units = 1

[[bench]]
name = "merkle"
harness = false

[[bench]]
name = "merkle_depth_4"
harness = false

[[bench]]
name = "merkle_depth_8"
harness = false

[[bench]]
name = "merkle_depth_16"
harness = false

[[bench]]
name = "merkle_depth_32"
harness = false
